k8s/04-auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  namespace: kiraops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: kiraops-auth:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: kiraops
spec:
  selector:
    app: auth
  ports:
    - port: 3002
      targetPort: 3002
