k8s/05-product-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  namespace: kiraops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
        - name: product-service
          image: kiraops-product-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3003
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: kiraops
spec:
  selector:
    app: product-service
  ports:
    - port: 3003
      targetPort: 3003
