k8s/06-orders.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders
  namespace: kiraops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
        - name: orders
          image: kiraops-orders:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3004
---
apiVersion: v1
kind: Service
metadata:
  name: orders
  namespace: kiraops
spec:
  selector:
    app: orders
  ports:
    - port: 3004
      targetPort: 3004
