k8s/07-user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: kiraops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: kiraops-user-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3005
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: kiraops
spec:
  selector:
    app: user-service
  ports:
    - port: 3005
      targetPort: 3005
